# jarvis-graph-lite

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HEALTH_REPORT_JARVIS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  deferred-features.md  launch_posts.md  rollback.md
failures/: 001-call-resolution-import-x.md  README.md
scripts/: ci-local.sh  run_context.bat  run_detect_changes.bat  run_impact.bat  run_index.bat  run_query.bat
src/jarvis_graph/: __init__.py  __main__.py  change_detector.py  circular_deps_engine.py  cli.py  complexity_engine.py  config.py  context_engine.py  coverage_gap_engine.py  db.py  dead_code_engine.py  drift_engine.py  fan_out_engine.py  find_path_engine.py  gitignore.py  god_files_engine.py  hashing.py  health_report_engine.py  impact_engine.py  indexer.py  logging_utils.py  long_functions_engine.py  models.py  parallel.py  parser_python.py  query_engine.py  ranker.py  refactor_priority_engine.py  repo_summary.py  schema.py  test_skeleton_engine.py  todo_comments_engine.py  unused_imports_engine.py  utils.py
tests/: conftest.py  test_circular_deps.py  test_complexity.py  test_context.py  test_coverage_gaps.py  test_dead_code.py  test_detect_changes.py  test_drift_engine.py  test_fan_out.py  test_find_path.py  test_gitignore.py  test_god_files.py  test_health_report.py  test_impact.py  test_indexer.py  test_long_functions.py  test_parallel_indexer.py  test_query.py  test_refactor_priority.py  test_repo_summary.py  test_test_skeleton.py  test_todo_comments.py  test_unused_imports.py
tests/fixtures/sample_repo/: app.py  helpers.py  lazy_caller.py  plain_import_caller.py  service.py
tests/fixtures/sample_repo/package/: __init__.py  worker.py
