[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-graph-lite"
version = "0.12.4"
description = "Repo-local code intelligence layer for Python projects. Stdlib only."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jarvis-graph = "jarvis_graph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
